Updated portfolio website

--- a/projects.html
+++ b/projects.html
@@ -62,11 +62,25 @@
             </div>
 
             <h2>Acknowledgement of Copyright</h2>
+
             <p>Due to copyright considerations, a screenshot of the original Netflix landing page has not been included. This demonstrates my commitment to respecting intellectual property while showcasing my ability to create similar user interfaces.</p>
 
             <h2> Project 5-Personal Portfolio Website:</h2>
             <p>This website serves as a personal project designed to showcase my front-end development skills. It highlights my expertise in HTML, CSS, and JavaScript while providing a platform for potential clients to explore my work. I am committed to continuously improving this portfolio, incorporating new projects and enhancements that reflect my evolving abilities and design sensibilities.</p>  
+
+            <h2>Project 6- A simple but professional looking calculator </h2>
+            <img src="img/calculator.png" alt="Screenshot of calculator app" class="project-image">
+
+            <p>A responsive, user-friendly calculator built using HTML, CSS, and JavaScript, designed for quick and accurate basic arithmetic operations. This application features a clean, intuitive interface, supporting standard functions like addition, subtraction, multiplication, division, and clearing input. Through a grid-based layout and smooth event handling, the calculator delivers a seamless user experience across devices, ensuring functionality with a focus on simplicity and precision.
+
+                <a href="https://demon2316slayer.github.io/calculator/">CLICK HERE TO TRY</a>
+            </p>
+
         </div>
+
+          
+
+
     </section>
 
     <section class="conclusion">
